<resources>
    <string name="app_name">LifeDogApp</string>
    <string name="title_login">Inicio de sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="forgotten_password">Olvidé mi contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="no_account">¿No tienes una cuenta?</string>
    <string name="btn_sign_up">Regístrate</string>
    <string name="title_welcome">¡Bienvenida/o a Life Dog!</string>
    <string name="name">Nombre</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="btn_create_account">Crear cuenta</string>
    <string name="title_reset_password">Restablecer contraseña</string>
    <string name="reset_code">Te enviaremos un código a tu correo electrónico</string>
    <string name="btn_send">Enviar</string>
    <string name="enter_reset_code">Ingresa el código</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_code_not_received">No recibí el código</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="btn_reset">Restablecer</string>
    <string name="my_dogs">Mis perritos</string>
    <string name="male_dog">Macho</string>
    <string name="female_dog">Hembra</string>
    <string name="add_dog">Añadir perrito</string>
    <string name="title_general_info">Información general</string>
    <string name="add_dog_photo">Agrega una foto</string>
    <string name="btn_add">Añadir</string>
    <string name="btn_add_dog">Añadir perrito</string>
    <string name="btn_details">Detalles</string>
    <string name="btn_save_changes">Guardar cambios</string>
    <string name="btn_share">Compartir</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_reject">Rechazar</string>
    <string name="btn_close">Cerrar</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="dog_breed">Raza</string>
    <string name="dog_gender">Sexo</string>
    <string name="dog_size">Tamaño</string>
    <string name="dog_weight">Peso</string>
    <string name="dog_birth_date">Fecha de nacimiento</string>
    <string name="dog_color">Color</string>
    <string name="sterilized_dog">Esterilizado/a</string>
    <string name="title_diseases">Enfermedades</string>
    <string name="title_allergies">Alergias</string>
    <string name="title_upcoming_events">Eventos próximos</string>
    <string name="title_basic_needs">Necesidades básicas</string>
    <string name="title_health">Estado de salud</string>
    <string name="feeding">Alimentación</string>
    <string name="walks">Paseos</string>
    <string name="baths">Baños</string>
    <string name="haircut">Corte de pelo</string>
    <string name="vaccines">Vacunas</string>
    <string name="medicines">Medicamentos</string>
    <string name="vet_visits">Consultas</string>
    <string name="deworming">Desparasitación</string>
    <string name="no_diseases">No padece de enfermedades</string>
    <string name="no_allergies">No padece de alergias</string>
    <string name="edit_dog">Editar perrito</string>
    <string name="role_editor">Editor</string>
    <string name="role_read_only">Lector</string>
    <string name="role_details">* El editor puede añadir o modificar información</string>
    <string name="upcoming_feeding">Alimentos próximos</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="title_general_reminders">Recordatorios generales</string>
    <string name="title_add_reminder">Agregar recordatorio</string>
    <string name="times_a_day">Veces al día</string>
    <string name="hour">Hora</string>
    <string name="hours">Horas</string>
    <string name="date">Fecha</string>
    <string name="optional_food">Alimento (opcional)</string>
    <string name="upcoming_baths">Baños próximos</string>
    <string name="no_upcoming_events">No se encontraron eventos próximos</string>
    <string name="start_date">Fecha de inicio</string>
    <string name="repeat">Repetir cada</string>
    <string name="day_before_reminder">Recordar el día anterior</string>
    <string name="walk_days">Días de paseos</string>
    <string name="walk_place">Lugar del paseo (opcional)</string>
    <string name="vet_clinic">Clínica veterinaria</string>
    <string name="title_history">Historial</string>
    <string name="upcoming_doses">Dosis próximas</string>
    <string name="start_time">Hora de inicio</string>
    <string name="treatment_duration">Duración del tratamiento</string>
    <string name="about_medicine">Sobre el medicamento</string>
    <string name="end_date">Fecha de finalización</string>
    <string name="end_by">Finalizar en</string>
    <string name="lifetime_medicine">Medicamento de por vida</string>
    <string name="type">Tipo</string>
    <string name="dose">Dosis</string>
    <string name="capacity">Capacidad (opcional)</string>
    <string name="title_active_treatments">Tratamientos activos</string>
    <string name="title_medicine_history">Historial de medicamentos</string>
    <string name="calendar">Calendario</string>
    <string name="event_details">Detalles del evento</string>
    <string name="expenses">Gastos</string>
    <string name="title_categories">Categorías</string>
    <string name="statistics">Estadísticas</string>
    <string name="total_expense">Gasto total</string>
    <string name="expenses_by_category">Gastos por categoría</string>
    <string name="add_expense">Añadir gasto</string>
    <string name="price">Precio</string>
    <string name="optional_place">Lugar (opcional)</string>
    <string name="place">Lugar</string>
    <string name="concept">Concepto</string>
    <string name="upcoming_vet_visits">Consultas próximas</string>
    <string name="vet_name">Veterinario/a (opcional)</string>
    <string name="visit_reason">Motivo de visita</string>
    <string name="booster_dose">Refuerzo</string>
    <string name="upcoming_deworming">Desparasitaciones próximas</string>
    <string name="single_dose">Dosis única</string>
    <string name="about_dewormer">Sobre desparasitante</string>
    <string name="dewormers_history">Historial de desparasitantes</string>
    <string name="accesories">Accesorios</string>
    <string name="accesory">Accesorio</string>
    <string name="quantity">Cantidad</string>
    <string name="settings">Configuración</string>
    <string name="appearance">Apariencia</string>
    <string name="system_theme">Tema del sistema</string>
    <string name="dark_theme">Tema oscuro</string>
    <string name="language">Idioma</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="reminders">Recordatorios</string>
    <string name="security">Seguridad</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="about">Acerca de</string>
    <string name="terms_of_use">Términos de uso</string>
    <string name="privacy_policy">Política de privacidad</string>
    <string name="hint_actual_password">Contraseña actual</string>
    <string name="delete_account_msg">Si eliminas tu cuenta, se perderán todos los datos relacionados a ella</string>
    <string name="title_terms_of_use">Life Dog - Términos de uso</string>
    <string name="title_privacy_policy">Life Dog - Política de privacidad y uso de datos</string>
    <string name="life_dog" translatable="false">LIFE DOG</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</string>
    <string name="short_lorem" translatable="false">Lorem ipsum</string>
    <string name="dog_age">Edad</string>
    <string name="hint_dog_name" translatable="false">Firulais</string>
    <string name="hint_dog_breed" translatable="false">Husky</string>
    <string name="cares">Cuidados</string>
    <string name="hint_hour">15:30</string>
    <string name="hint_date">1/01/2021</string>
    <string name="hint_number" translatable="false">1</string>
    <string name="title_repeat">Repetición</string>
    <string name="hint_dose">20ml</string>
    <string name="aditional">Datos adicionales</string>
    <string name="vet_visits_history">Historial de consultas</string>
    <string name="deworming_history">Historial de desparasitaciones</string>
    <string name="upcoming_dog_walks">Paseos próximos</string>
    <string name="year">años</string>
    <string name="kilograms">kilogramos</string>
    <string name="female">hembra</string>
    <string name="reinforcement">Refuerzo</string>
    <string name="title_add">Añadir</string>
    <string name="quantities">Cantidad</string>
    <string name="title_next_meals">Alimentos próximos</string>
    <string name="Terms_of_use">Términos de uso</string>
    <string name="System_theme">Tema Sistema</string>
    <string name="food">Alimento</string>
    <string name="toilets">Baños</string>
    <string name="inquiries">Consultas</string>
    <string name="kilos">Kilos</string>
    <string name="cookie">Galleta</string>
    <string-array name="statistics_array">
        <item>Este mes</item>
        <item>Esta semana</item>
        <item>Este año</item>
    </string-array>
    <string-array name="time_array">
        <item>Horas</item>
        <item>Días</item>
        <item>Semanas</item>
        <item>Años</item>
    </string-array>
    <string-array name="medicine_types_array">
        <item>Analgésicos y antiinflamatorios</item>
        <item>Pastilla</item>
        <item>Suspensión</item>
        <item>Antibióticos</item>
        <item>Vitaminas y suplementos</item>
        <item>Otros</item>
    </string-array>
    <string-array name="deworming_types_array">
        <item>Desparasitante interno</item>
        <item>Desparasitante externo</item>
    </string-array>
    <string name="menu_home">Principal</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_expenses">Gastos</string>
    <string name="menu_settings">Configuración</string>
    <string name="privacy">Life Dog entiende demasiado la importante que es la privacidad para nuestros clientes, y tambien queremos que se sientan seguros de usar nuestra app, para ello, queremos asegurarnos de que pueda comprender como recopilamos y usamos su informacion personal  en cada dispositivo móvil y sus servicios disponibles dentro de nuestra aplicacion Life Dog.\\n\\nFINALIDAD DE TRATAMIENTOS DE DATOS PERSONALES\\n\\nEn LIFE DOG app, nos aseguramos que la aplicación corra de la mejor manera, para ellos es necesario recopilar la información personal que proporciona directamente e información de terceros. Dicha información se utiliza para poder brindar una mejor y personalizada experiencia. También usamos información personal para brindar consejos adaptados para su pequeño amigo peludo. La recogida, almacenamiento, modificación, estructuración y en su caso, eliminación, de los datos proporcionados por los Usuarios, constituirán operaciones de tratamiento llevadas a cabo por el Responsable, con la finalidad de garantizar el correcto funcionamiento de la Aplicación, mantener la relación de prestación de servicios con el Usuario, y para la gestión, administración, información, prestación y mejora del servicio.</string>
    <string name="slogan">¡Los mejores cuidados para tu mejor amigo!</string>
</resources>