<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dogProfilesFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/mainDogProfileFragment"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_pawprint"/>

    <item
        android:title="@string/menu_calendar"
        android:icon="@drawable/ic_calendar"/>

    <item
        android:id="@+id/expensesFragment"
        android:title="@string/menu_expenses"
        android:icon="@drawable/ic_money_bag"/>

    <item
        android:id="@+id/settingFragment"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"/>

</menu>