<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    tools:context=".ui.AddDogFormFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvMedicineDate2"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginTop="@dimen/extra_small_gap"
                android:background="@drawable/custom_input_aqua"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="@dimen/extra_small_gap"
                android:elevation="@dimen/default_shadow"
                android:ems="10"
                android:hint="@string/hint_date"
                android:inputType="date"
                android:padding="@dimen/input_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/tvDetailsGender5"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailsGender5"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/tvMedicineHour2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:background="@drawable/custom_input_aqua"
                android:drawableStart="@drawable/ic_clock"
                android:drawablePadding="@dimen/extra_small_gap"
                android:elevation="@dimen/default_shadow"
                android:ems="10"
                android:hint="@string/hint_hour"
                android:inputType="time"
                android:padding="@dimen/input_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvMedicineDate2"
                app:layout_constraintTop_toBottomOf="@+id/textView64"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/small_font"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailsGender5"
                tools:layout_editor_absoluteX="235dp" />

            <TextView
                android:id="@+id/tvDetailsGender5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/dog_size"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/small_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

            <TextView
                android:id="@+id/TextView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/title_general_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="@dimen/dividers"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/extra_small_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView20" />

            <ImageView
                android:id="@+id/ivUploadDogPic"
                android:layout_width="163dp"
                android:layout_height="132dp"
                android:layout_marginTop="@dimen/default_gap"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:src="@color/lime_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:src="@drawable/ic_perrito" />

            <TextView
                android:id="@+id/tvUploadPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_gap"
                android:clickable="true"
                android:text="@string/add_dog_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUploadDogPic" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUploadPic" />

            <EditText
                android:id="@+id/etAddDogName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/extra_small_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:background="@drawable/custom_input_aqua"
                android:drawableStart="@drawable/ic_pawprint"
                android:drawablePadding="@dimen/input_min_padding"
                android:elevation="@dimen/default_shadow"
                android:ems="10"
                android:hint="@string/hint_dog_name"
                android:inputType="text"
                android:padding="@dimen/input_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddDogName" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/extra_small_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:background="@drawable/custom_input_aqua"
                android:drawableStart="@drawable/ic_heart"
                android:drawablePadding="@dimen/input_padding"
                android:elevation="@dimen/default_shadow"
                android:ems="10"
                android:hint="@string/hint_dog_breed"
                android:inputType="text"
                android:padding="@dimen/input_min_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/dog_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/extra_small_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:foregroundGravity="fill_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView63">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/medium_gap"
                    android:text="@string/male_dog" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_dog" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>