<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua_200"
    tools:context=".ui.ResetPassword1Fragment">

    <TextView
        android:id="@+id/resetPswdTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="@string/title_reset_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="@string/reset_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPswdTextView2" />

    <EditText
        android:id="@+id/resetEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_large_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/extra_large_gap"
        android:background="@drawable/custom_input_dark_blue"
        android:drawableStart="@drawable/ic_padlock"
        android:drawablePadding="@dimen/input_padding"
        android:drawableTint="@color/dark_blue"
        android:elevation="@dimen/default_shadow"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/input_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendCodeTextView" />

    <Button
        android:id="@+id/sendCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/btn_send"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/resetEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/resetEmailEditText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_dark_bottom_deco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>