<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/loginTopImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginBottomImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.07"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTopImageView"
        app:layout_constraintVertical_bias="0.19999999"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_large_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/extra_large_gap"
        android:background="@drawable/custom_input_aqua"
        android:textColorHint="@color/gray"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/input_padding"
        android:elevation="@dimen/default_shadow"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/input_padding"
        app:layout_constraintBottom_toTopOf="@+id/LoginPaswEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <EditText
        android:id="@+id/LoginPaswEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_large_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/extra_large_gap"
        android:background="@drawable/custom_input_aqua"
        android:textColorHint="@color/gray"
        android:drawableStart="@drawable/ic_padlock"
        android:drawablePadding="@dimen/input_padding"
        android:elevation="@dimen/default_shadow"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/input_padding"
        app:layout_constraintBottom_toTopOf="@+id/forgottenPaswTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText" />

    <TextView
        android:id="@+id/forgottenPaswTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:clickable="true"
        android:text="@string/forgotten_password"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/LoginPaswEditText"
        app:layout_constraintTop_toBottomOf="@+id/LoginPaswEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:cornerRadius="@dimen/corner_radius"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgottenPaswTextView" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividers"
        android:layout_marginStart="@dimen/extra_large_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/extra_large_gap"
        android:background="?attr/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/newAccountTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:text="@string/no_account"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        app:cornerRadius="@dimen/corner_radius"
        android:text="@string/btn_sign_up"
        android:backgroundTint="@color/aqua_100"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/loginBottomImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>